--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,4 +25,11 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation "org.solverslib:core:0.3.3" // add SolversLib core
+}
+
+repositories {
+    maven {
+        url "https://repo.dairy.foundation/releases"
+    }
 }
