add Pedro Pathing support

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,7 +25,8 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation "org.solverslib:core:0.3.3" // add SolversLib core
+    implementation "org.solverslib:core:0.3.3" // core
+    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
 }
 
 repositories {
