Add support for SolversLib and Pedro Pathing

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,7 +10,11 @@
 
 
 // Custom definitions may go here
-
+repositories {
+    maven {
+        url "https://repo.dairy.foundation/releases"
+    }
+}
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
@@ -25,4 +29,6 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation "org.solverslib:core:0.3.3" // core
+    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
 }
